--- a/sentry/templates/hooks/snuba-db-init.job.yaml
+++ b/sentry/templates/hooks/snuba-db-init.job.yaml
@@ -9,6 +9,7 @@ metadata:
     chart: "{{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}"
     release: "{{ .Release.Name }}"
     heritage: "{{ .Release.Service }}"
+    sidecar.istio.io/inject: "false"          
   annotations:
     # This is what defines this resource as a hook. Without this line, the
     # job is considered part of the release.
@@ -34,6 +35,7 @@ spec:
       labels:
         app: sentry
         release: "{{ .Release.Name }}"
+        sidecar.istio.io/inject: "false"              
         {{- if .Values.snuba.podLabels }}
 {{ toYaml .Values.snuba.podLabels | indent 8 }}
         {{- end }}
